--- a/jessica.html
+++ b/jessica.html
@@ -1,13 +1,20 @@
 <html>
-<body>Jessica Luis</body>
+<div>
+<center>
+<button onclick="document.getElementById('demo').innerHTML=Date()">The time is?</button>
+<p id="demo"></p>
+</center>
 <head>
 <link rel="stylesheet" type="text/css" href="jessica.css">
 </head>
 <!--<p>This is my second webpage</p>-->
 <p></p>
-<body>
-<h1>About me!</h1>
-<p>I attended Archimedean Academy and Archimedean Middle Conservatory for elementary and middle school. Currently, I attend Coral Reef Senior High School for the International Baccalaureate (IB Academy). After graduation I plan on attending a college/university; studying for a major in Aerospace Engineering [specializing in avionics] and a minor in Applied Mathematics.</p>
+<body><center>
+<h1><strong>About me!<strong></h1>
+<p>My name is Jessica Marie Luis and I am second generation American.</p>
+<p>I attended Archimedean Academy and Archimedean Middle Conservatory for elementary and middle school. Currently, I attend Coral Reef Senior High School for the International Baccalaureate (IB Academy).</p>
+<p>After graduation I plan on attending a college/university; studying for a major in Aerospace Engineering [specializing in avionics], Computer Engineering, General and a minor in Applied Mathematics.</p>
+
 <h2>Personal Information:</h2>
 <table>
 	<tr>
@@ -17,38 +24,31 @@
 		<th>Date of Birth</th>
 		<th>Birth Location</th>
 		<th>Sibling(s)</th>
+		<th>Zodiac Sign</th>
 	</tr>
-	<tr>
+<tr>
 		<th>Marie</th>
 		<th>Seventeen (17)</th>
 		<th>Twelfth Grade (12th)</th>
 		<th>November 30, 1999</th>
 		<th>Miami, Florida, United States of America</th>
 		<th>Younger Brother</th>
+		<th>sagittarius</th>
 	</tr>
 </table>
 <div>
-<h3>2017 Summer Activites:</h3>
-<ul>
-	<li>Dual Enrollment</li>
-	<li>GirlsWhoCode Summer Program</li>
-	<li>Swim Practice</li>
-	<li>Vacation (finishing the Carribean and United States- except Washington)</li>
-</ul>
-<ol>
-<ul>
-	<li>Nevada</li>
-	<li>Arizona</li>
-	<li>Utah</li>
-	<li>New Mexico</li>
-	<li>California</li>
-	<li>Aruba</li>
-	<li>Curacao</li>
-	<li>Bonaire</li>
-	<li>Trinidad</li>
-</ul>
-</ol>
-<img src="Geo-Map--USA.png"></img>
-<img src=".png"></img>
-</body>
+
+<h3>My favorite movie(s):</h3>
+<p id="demo1" style="display:none">'Super 8' and 'Rock of Ages'</p>
+<button type="button"
+onclick="document.getElementById('demo1').style.display='block'">
+Answer Here!</button>
+<div>
+
+<h4>My favorite song(s):</h4>
+<p id="demo2" style="display:none">'New york City' by The Chainsmokers</p>
+<button type="button"
+onclick="document.getElementById('demo2').style.display='block'">
+Answer Here!</button>
+</body></center>
 </html>
